--- a/app/views/mainSite.scala.html
+++ b/app/views/mainSite.scala.html
@@ -110,16 +110,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p>© 2016 Atelier Flávia Salles. All Rights Reserved | by Kelwy Oliveira, Mayara Ribeiro, Raiane Amaral</p>
 		  </div>
 		</div>
+		</div>
 		</div>        
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="@routes.Assets.versioned("vendors/appatelier/js/jquery.min.js")"></script>
-		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-		<!--webfont-->
+		<!-- <script src="@routes.Assets.versioned("vendors/appatelier/js/jquery.min.js")"></script> -->
+<!-- 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+ -->		<!--webfont-->
 		<!-- for bootstrap working -->
-			<script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/bootstrap-3.1.1.min.js")"></script>
-		<!-- //for bootstrap working -->
+<!-- 			<script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/bootstrap-3.1.1.min.js")"></script>
+ -->		<!-- //for bootstrap working -->
 		<!-- cart -->
-			<script src="@routes.Assets.versioned("vendors/appatelier/js/simpleCart.min.js")"> </script>
-		
+<!-- 			<script src="@routes.Assets.versioned("vendors/appatelier/js/simpleCart.min.js")"> </script>
+ -->		
 		</body>
 </html>
